adicionado links do site da nath

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <script src="https://unpkg.com/scrollreveal"></script>
     <meta
       name="description"
       content="Site portifólio do desenvolvedor Fabricio Oliveira"
