feat/add metadata google search console

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="sfE8ZHkaHMkUgcsQCPBg4AwJsFuBnMynhdNNHGA4K6c" />
   <title>Fabricio Oliveira — Desenvolvedor Web & Mobile</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
