--- a/index.html
+++ b/index.html
@@ -28,5 +28,14 @@
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZG5V5CB51T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZG5V5CB51T');
+</script>
 
 </html>
