--- a/index.html
+++ b/index.html
@@ -2,14 +2,27 @@
 <html lang="pt-BR" class="dark">
 
 <head>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QH88QHJB15"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-QH88QHJB15');
+  </script>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="sfE8ZHkaHMkUgcsQCPBg4AwJsFuBnMynhdNNHGA4K6c" />
   <title>Fabricio Oliveira — Desenvolvedor Web & Mobile</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
   <meta name="description"
     content="Portfólio de Fabricio Oliveira. Desenvolvedor Web & Mobile especializado em React, TypeScript e Next.js." />
   <meta name="author" content="Fabricio Oliveira" />
@@ -32,7 +45,7 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZG5V5CB51T"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
+  function gtag() { dataLayer.push(arguments); }
   gtag('js', new Date());
 
   gtag('config', 'G-ZG5V5CB51T');
